<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vocabularylist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="voucher_value"/>
    
    <string name="create_product">Create Product</string>
    <string name="word_">Word:</string>
    <string name="word_type_">Word Type:</string>
    <string name="definition_">Definition:</string>
    <string name="example_">Example:</string>
    <string name="_n_n_n_n_n_n_n">\\n\\n\\n\\n\\n\\n\\n</string>
    <string name="word">Word</string>
    <string name="word_type">Word Type</string>
    <string name="definition">Definition</string>
    <string name="example">Example</string>
    
    <string name="view_word_list">View Word List</string>
    <string name="save">Save</string>
    <string name="add_new_word">Add New Word</string>
    
    <string name="enter_a_list_name_">Enter a list name:</string>
    <string name="list_name">list name</string>
    <string name="tvmessage">tvMessage</string>
    <string name="_close_">" Close "</string>
    <string name="_ok_">" OK "</string>
    
    <string name="cannot_connect_to_database">Cannot connect to database</string>
    <string name="_try_again_">" Try Again "</string>
    
    <string name="speaker_icon">Speaker Icon</string>
    
    <string name="tvID">ID</string>
    
    <string name="stop_speech">Stop Speech</string>
    <string name="vocabulary_list">Vocabulary List</string>
    <string name="tvImport">Import vocabulary from the URL below</string>
    <string name="etIPAddress">http://192.168.1.107</string>
    <string name="etIPAddressHint">IP address</string>
    <string name="btnViewProducts">Import Vocabulary</string>
    <string name="tvSpinner">View vocabulary list stored on this app</string>
    <string name="btnViewDatabase">View</string>
    <string name="btnDeleteList">Delete</string>
    
     

</resources>
